# fin_poc

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT_COMPLETION_STATUS.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  agents.py  company_resolver.py  config.py  database_connectors.py  external_api_connectors.py  financial_data.py  http_contracts.py  llm.py  main.py  mcp_auth.py  mcp_contracts.py  mcp_gateway.py  models.py  period_resolver.py  public_mcp_service.py  repositories.py  sample_data.py  validation.py
backend/mcp_servers/: finance.py  knowledge.py  rag.py  transcript.py
backend/scripts/: __init__.py  discover_database.py  evaluate.py  evaluate_llm_behavior.py  evaluate_scale.py  evaluate_sec.py  evaluate_transcripts.py  export_api_spec.py  export_mcp_spec.py  ingest_sec.py  ingest_transcripts.py  init_data.py  init_sqlite.py  load_test.py  run_local.py  seed_scale.py  smoke_mcp.py  sync_internal_database.py  text_blocks.py
backend/tests/: test_api.py  test_company_resolver.py  test_database_connectors.py  test_external_api_connectors.py  test_financial_data.py  test_http_mcp_integration.py  test_mcp_auth.py  test_mcp_gateway.py  test_mcp_servers.py  test_mock_workflow.py  test_neo4j_adapter.py  test_period_resolver.py  test_product_runtime.py  test_rag_mcp.py  test_sec_ingestion.py  test_sqlite_repository.py  test_transcript_ingestion.py  test_transcript_mcp.py  test_validation.py
config/: external_apis.example.json  external_databases.example.json
data/: sample_documents.json
docs/: ADDING_EXTERNAL_MCP.md  (+18 more)
(+11 files in other folders)
