[project]
name = "verified-financial-rag-mcp"
version = "1.0.0"
description = "Verified financial and earnings-call RAG MCP product"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "pydantic>=2.11",
  "pydantic-settings>=2.10",
  "httpx>=0.28",
  "neo4j>=5.28",
  "neo4j-graphrag[ollama]",
  "langgraph>=0.6",
  "langchain-core>=0.3",
  "langchain-mcp-adapters>=0.2",
  "fastmcp>=3,<4",
  "mcp>=1.27,<2",
  "tenacity>=9.1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pymysql>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-asyncio>=1.1",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_servers"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
